Name:               feed
Version:            0.3
License:            BSD3
License-file:       LICENSE
Category:           Text
Synopsis:           Interfacing with RSS (v 0.9x, 2.x, 1.0) + Atom feeds.
Description:        Interfacing with RSS (v 0.9x, 2.x, 1.0) + Atom feeds.
Author:             Sigbjorn Finne
Maintainer:         Don Stewart <dons@galois.com>
Extra-Source-Files: tests/Main.hs tests/Setup.hs tests/rss-tests.cabal
Cabal-version:   >= 1.2
build-type: Simple

flag new-base
  description: Build with new smaller base library
  default: False

library
    Exposed-Modules: Text.RSS.Syntax
                     Text.RSS.Import
                     Text.RSS.Export
                     Text.RSS1.Syntax
                     Text.RSS1.Import
                     Text.RSS1.Utils
                     Text.RSS1.Export
                     Text.DublinCore.Types
                     Text.Atom.Feed
                     Text.Atom.Feed.Export
                     Text.Atom.Feed.Import
                     Text.Atom.Feed.Link
                     Text.Atom.Feed.Validate
                     Text.Atom.Pub
                     Text.Atom.Pub.Export
                     Text.Feed.Import
                     Text.Feed.Types
                     Text.Feed.Export
                     Text.Feed.Query
                     Text.Feed.Constructor
                     Text.Feed.Translate
    Ghc-Options:     -Wall -O2
    Build-Depends:   base, xml >= 1.2.3

executable feed-test {
  build-depends:        base, xml >= 1.2.4
  if flag(new-base) {
    build-depends: base >= 3, containers, old-time, old-locale, filepath
  } else {
    build-depends: base < 3
  }
  main-is:              tests/Main.hs
  ghc-options:          -Wall -fglasgow-exts
}
